Display styling changes

--- a/src/js/index.scss
+++ b/src/js/index.scss
@@ -50,6 +50,14 @@ html, body {
     background-color: $gray-900;
     color: white;
 
+    .items .item.active-item, .item:hover {
+      background-color: $gray-700;
+    }
+
+    .card-body {
+      color: black;
+    }
+
     .chat-container li .chat-text-wrapper {
       background: #4d4d4d;
     }
@@ -150,18 +158,6 @@ html, body {
 
 .items .item.active-item, .item:hover {
     background-color: #ffffff;
-    /* Fallback Color */
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f9fb), to(#ffffff));
-    /* Saf4+, Chrome */
-    background-image: -webkit-linear-gradient(right, #f7f9fb, #ffffff);
-    /* Chrome 10+, Saf5.1+, iOS 5+ */
-    background-image: -moz-linear-gradient(right, #f7f9fb, #ffffff);
-    /* FF3.6 */
-    background-image: -ms-linear-gradient(right, #f7f9fb, #ffffff);
-    /* IE10 */
-    background-image: -o-linear-gradient(right, #f7f9fb, #ffffff);
-    /* Opera 11.10+ */
-    background-image: linear-gradient(right, #f7f9fb, #ffffff);
 }
 
 .items .person:last-child {
@@ -489,7 +485,7 @@ ul {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: rgba(0,0,0,0.5);
+  background-color: $gray-700;
   z-index: 990;
 
   .loading-view {
@@ -519,5 +515,21 @@ ul {
         max-width: 480px;
       }
     }
+  }
+}
+
+
+
+.dark {
+  .loading-screen {
+    color: white;
+  }
+
+  .loading-view-container {
+    background-color: $gray-900;
+  }
+
+  .sk-chase-dot:before {
+    background-color: white;
   }
 }
